# revolver

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  config.toml.example  docker-compose.yml
.claude/skills/create-issue/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/category-icons/proposals/: compare.html
proptest-regressions/upnp/: object_id.txt
src/: config.rs  config_catalog.rs  error.rs  lib.rs  main.rs  normalize.rs  random.rs  ssdp.rs  state.rs
src/art/: cache.rs  extract.rs  mod.rs
src/browse/: albums.rs  artist_tracks.rs  categories.rs  mod.rs  played.rs  quality.rs  random.rs  recent.rs  search.rs  test_helpers.rs  tracks.rs
src/db/: albums.rs  config_overrides.rs  mod.rs  schema.rs  state_kv.rs  tracks.rs  udf.rs
src/http/: admin.rs  admin_config.rs  admin_ui.html  art.rs  gena.rs  mod.rs  soap_ctrl.rs  stream.rs  upnp.rs
src/scan/: matcher.rs  mod.rs  progress.rs  report.rs  tagger.rs  walker.rs
src/upnp/: connection_manager.rs  content_directory.rs  device.rs  didl.rs  gena.rs  icon.rs  mod.rs  notify.rs  object_id.rs  scpd.rs  scpd_cd.xml  search.rs  soap.rs  usn.rs  xml.rs
tests/: http_e2e.rs
